syntax = "proto3";

package manman.v1;

option go_package = "github.com/whale-net/everything/manmanv2/protos;manmanpb";

// ============================================================================
// Structured Data Types
// ============================================================================

// PortBinding represents a container-to-host port mapping
message PortBinding {
  int32 container_port = 1;
  int32 host_port = 2;
  string protocol = 3;  // "TCP" | "UDP"
}

// FileTemplate represents a file to be created in the container
message FileTemplate {
  string path = 1;
  string content = 2;
  string mode = 3;  // e.g., "0644"
  bool is_template = 4;
}

// Parameter represents a configurable parameter for a game
message Parameter {
  string key = 1;
  string value = 2;
  string type = 3;  // "string" | "int" | "bool" | "secret"
  string description = 4;
  bool required = 5;
  string default_value = 6;
}

// GameMetadata represents additional information about a game
message GameMetadata {
  string genre = 1;
  string publisher = 2;
  int32 default_players = 3;
  int32 max_players = 4;
  map<string, string> links = 5;
  repeated string tags = 6;
}

// ServerCapabilities represents the resources available on a server
message ServerCapabilities {
  int32 total_memory_mb = 1;
  int32 available_memory_mb = 2;
  int32 cpu_cores = 3;
  int32 available_cpu_millicores = 4;
  repeated PortRange available_ports = 5;
  string docker_version = 6;
}

// PortRange represents a range of available ports
message PortRange {
  int32 start = 1;
  int32 end = 2;
  string protocol = 3;
}

// LogBatch represents a compressed batch of logs
message LogBatch {
  string batch_id = 1;  // UUID for deduplication
  int64 session_id = 2;
  int64 start_timestamp = 3;
  int64 end_timestamp = 4;
  int32 line_count = 5;
  bytes compressed_logs = 6;
  LogSource source = 7;
}

// LogSource indicates where logs originated from
enum LogSource {
  LOG_SOURCE_UNSPECIFIED = 0;
  LOG_SOURCE_STDOUT = 1;
  LOG_SOURCE_STDERR = 2;
  LOG_SOURCE_WRAPPER = 3;
}

// ============================================================================
// Domain Models
// ============================================================================

// Server represents a physical/virtual machine running the host manager
message Server {
  int64 server_id = 1;
  string name = 2;
  string status = 3;  // "online" | "offline"
  int64 last_seen = 4;  // Unix timestamp (seconds since epoch), 0 if never seen
  string environment = 5;  // Optional: deployment environment (dev, staging, prod, etc.)
  bool is_default = 6;  // True if this is the default server
}

// Game represents a game definition (e.g., Minecraft, Valheim)
message Game {
  int64 game_id = 1;
  string name = 2;
  string steam_app_id = 3;  // optional
  GameMetadata metadata = 4;
}

// GameConfig represents a preset/template for running a game
message GameConfig {
  int64 config_id = 1;
  int64 game_id = 2;
  string name = 3;
  string image = 4;  // Docker image (e.g., "minecraft:latest", "itzg/minecraft-server:latest")
  string args_template = 5;  // optional - rendered command arguments
  map<string, string> env_template = 6;
  repeated FileTemplate files = 7;
  repeated Parameter parameters = 8;
  repeated string entrypoint = 9;  // optional - override Docker ENTRYPOINT
  repeated string command = 10;  // optional - override Docker CMD (alternative to args_template)
}

// ServerGameConfig represents a game configuration deployed on a specific server
message ServerGameConfig {
  int64 server_game_config_id = 1;
  int64 server_id = 2;
  int64 game_config_id = 3;
  repeated PortBinding port_bindings = 4;
  map<string, string> parameters = 5;
  string status = 6;  // "active" | "inactive"
}

// Session represents an execution of a ServerGameConfig
message Session {
  int64 session_id = 1;
  int64 server_game_config_id = 2;
  int64 started_at = 3;  // Unix timestamp, 0 if not started
  int64 ended_at = 4;  // Unix timestamp, 0 if not ended
  int32 exit_code = 5;
  string status = 6;  // "pending" | "starting" | "running" | "stopping" | "stopped" | "crashed" | "completed"
  map<string, string> parameters = 7;
  int64 restored_from_backup_id = 8;  // Backup ID used to restore this session (0 if not restored)
}

// Backup represents a compressed backup of game save data stored in S3
message Backup {
  int64 backup_id = 1;
  int64 session_id = 2;  // Session that was backed up
  int64 server_game_config_id = 3;  // SGC for this backup
  string s3_url = 4;  // S3 URL for the backup tarball
  int64 size_bytes = 5;  // Size of the backup file
  string description = 6;  // User-provided description
  int64 created_at = 7;  // Unix timestamp
}

// ServerPort represents port allocation tracking at server level
message ServerPort {
  int64 server_id = 1;
  int32 port = 2;
  string protocol = 3;  // "TCP" | "UDP"
  int64 server_game_config_id = 4;  // 0 if not allocated
  int64 allocated_at = 5;  // Unix timestamp
}

// ============================================================================
// Configuration Strategy System
// ============================================================================

// ConfigurationStrategy defines how to render configuration for a game
message ConfigurationStrategy {
  int64 strategy_id = 1;
  int64 game_id = 2;
  string name = 3;  // "Server Properties", "CLI Args", "Environment Variables", "Data Volume"
  string description = 4;
  string strategy_type = 5;  // "cli_args", "env_vars", "file_json", "file_properties", "volume", etc.
  string target_path = 6;  // File path like "/data/server.properties" or mount path for volumes
  string base_template = 7;  // Base configuration template or host-side subpath for volumes
  map<string, string> render_options = 8;  // Format-specific rendering options (e.g. read_only: true)
  int32 apply_order = 9;  // Order to apply strategies (lower first)
}

// StrategyParameterBinding links parameters to configuration strategies
message StrategyParameterBinding {
  int64 binding_id = 1;
  int64 strategy_id = 2;
  int64 param_id = 3;
  string binding_type = 4;  // "direct", "template", "json_path", "xpath", "ini_section"
  string target_key = 5;  // Where to apply in the config
  string value_template = 6;  // Optional transformation template
  string condition_expr = 7;  // Optional conditional logic
}

// ConfigurationPatch represents configuration overrides at different levels
message ConfigurationPatch {
  int64 patch_id = 1;
  int64 strategy_id = 2;
  string patch_level = 3;  // "game_config", "server_game_config", "session"
  int64 entity_id = 4;  // ID of the config/sgc/session
  string patch_content = 5;  // The patch content
  string patch_format = 6;  // "template", "json_merge_patch", "json_patch", "yaml_merge"
}

// PatchLayer shows one layer of configuration patches
message PatchLayer {
  string level = 1;  // "game_config", "server_game_config", "session"
  string patch_content = 2;  // The patch applied at this layer
}

// RenderedConfiguration shows final rendered configuration
message RenderedConfiguration {
  string strategy_name = 1;  // "Server Properties", "CLI Args", etc.
  string strategy_type = 2;  // "file_json", "env_vars", etc.
  string target_path = 3;  // Where it will be applied
  string rendered_content = 4;  // Final rendered configuration
  string base_content = 5;  // Base template before patches
  repeated PatchLayer patches = 6;  // Show the layering
}

// ============================================================================
// Game Actions System
// ============================================================================

// ActionDefinition defines an action that can be executed on a game session
message ActionDefinition {
  int64 action_id = 1;
  string definition_level = 2;  // "game", "game_config", or "server_game_config"
  int64 entity_id = 3;  // game_id, config_id, or sgc_id depending on definition_level
  string name = 4;  // Unique identifier (e.g., "save_game", "change_map")
  string label = 5;  // Display name (e.g., "Save Game", "Change Map")
  string description = 6;
  string command_template = 7;  // Go template syntax: "changelevel {{.map}}"
  int32 display_order = 8;
  string group_name = 9;  // Group actions together (e.g., "Game Control", "Admin")
  string button_style = 10;  // CSS class hint (primary, success, danger, etc.)
  string icon = 11;  // Optional icon class
  bool requires_confirmation = 12;
  string confirmation_message = 13;
  bool enabled = 14;
  repeated ActionInputField input_fields = 15;  // Input fields for this action
  int64 created_at = 16;  // Unix timestamp
  int64 updated_at = 17;  // Unix timestamp
}

// ActionInputField defines an input field for a parameterized action
message ActionInputField {
  int64 field_id = 1;
  int64 action_id = 2;
  string name = 3;  // Field identifier (e.g., "map", "workshop_id")
  string label = 4;  // Display label (e.g., "Select Map", "Workshop ID")
  string placeholder = 5;
  string help_text = 6;
  string field_type = 7;  // "text", "number", "select", "textarea", "checkbox", "radio"
  bool required = 8;
  string default_value = 9;
  int32 display_order = 10;
  // Validation fields
  string pattern = 11;  // Regex pattern
  double min_value = 12;
  double max_value = 13;
  int32 min_length = 14;
  int32 max_length = 15;
  int64 created_at = 16;  // Unix timestamp
  int64 updated_at = 17;  // Unix timestamp
  repeated ActionInputOption options = 18;  // Options for select/radio fields
}

// ActionInputOption defines an option for select/radio input fields
message ActionInputOption {
  int64 option_id = 1;
  int64 field_id = 2;
  string value = 3;  // Actual value used in template (e.g., "de_dust2")
  string label = 4;  // Display label (e.g., "Dust 2")
  int32 display_order = 5;
  bool is_default = 6;
  int64 created_at = 7;  // Unix timestamp
  int64 updated_at = 8;  // Unix timestamp
}

// ActionExecution records the execution of an action
message ActionExecution {
  int64 execution_id = 1;
  int64 action_id = 2;
  int64 session_id = 3;
  map<string, string> input_values = 4;  // User-provided input values
  string rendered_command = 5;  // Final command sent to stdin
  string status = 6;  // "success", "failed", "validation_error"
  string error_message = 7;
  string triggered_by = 8;  // Username or system identifier
  int64 executed_at = 9;  // Unix timestamp
}
